# chess_engine

./: .main.c.un~  CMakeLists.txt  New OpenDocument Spreadsheet.ods  README.md  board.c  chess_engine.h  evaluation.c  game.c  main.c  memory_debug.c  memory_debug.h  move_generation.c  play.c  test.c  test1.txt  uint64.c
